--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "i18next": "^24.2.3",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.4.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
